# metrics-collector

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  metrics-collector.service
docs/: adding-new-metrics.md  architecture.md  deployment.md  rust-cheatsheet.md  rust-intro-guide.md  trends-and-spikes.md
src/: aggregator.rs  analysis.rs  config.rs  main.rs  scheduler.rs  storage.rs
src/metrics/: disk.rs  docker.rs  docker_events.rs  docker_logs.rs  load_average.rs  memory.rs  mod.rs  processes.rs  processes_cpu.rs  processes_ram.rs  system_events.rs
